# onvif_srvd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  S90onvif_srvd
cmake/: FindgSOAP.cmake  build_gsoap.cmake  version.cmake  version.h.in
patch/: soapcpp2_lex.l.patch
src/: ServiceContext.cpp  ServiceContext.h  ServiceDevice.cpp  ServiceDiscovery.cpp  ServiceMedia.cpp  ServicePTZ.cpp  daemon.c  daemon.h  eth_dev_param.cpp  eth_dev_param.h  onvif_srvd.c  onvif_srvd.cpp  smacros.h  stools.h
start_scripts/: S90onvif_srvd  onvif_srvd.service
wsdl/: remotediscovery.wsdl
